[FIX] account_invoice_extract: added z-index to box so, it can be clicked
Added a high z-index to o_invoice_extract_box_layer css class to make the
extract box layer on top and clickable again.
This was caused by an added z-index to textLayer class in
odoo/odoo@5c238950bbf6

closes odoo/enterprise#60114

X-original-commit: eea4a22d887562a2290d12e25b4b8ab3725ed577

--- a/account_invoice_extract/static/src/css/box_layer.css
+++ b/account_invoice_extract/static/src/css/box_layer.css
@@ -7,6 +7,7 @@
     bottom: 0;
     overflow: hidden;
     opacity: 0.8;
+    z-index: 999;
   }
 
   .o_invoice_extract_box_layer > .o_invoice_extract_box {
